# rbob

./: .gitignore  Cargo.toml  build.sh  buildBwfor.sh  buildSupermuc.sh  modules.sh  showAttribute.sh  test.sh
config_files/: bwfor.yaml  local.yaml  supermuc.yaml  vera.yaml
plotTemplates/: dtype.gp  expansion.gp  params.gp  rtype.gp  scaling.gp  simple.gp  slice.gp
plotTemplates/config/: default.gp
src/: arepo_log_file.rs  args.rs  array_utils.rs  bob.rs  build.rs  build_config.rs  cascade.rs  config.rs  config_file.rs  copy.rs  copy_abundances.rs  diff.rs  get_data.rs  job_cascade.rs  job_params.rs  lib.rs  main.rs  make.rs  param_file.rs  param_value.rs  quant.rs  run.rs  sim_params.rs  sim_set.rs  sim_units.rs  simplex_log_file.rs  simulation.rs  simulation_set.rs  source_file.rs  strfmt_utils.rs  systype.rs  thread_pool.rs  unit_array.rs  unit_utils.rs  util.rs
src/gui/: config.rs  gui_sim_set.rs  mod.rs  named.rs  plot.rs  selection.rs
src/postprocess/: axis.rs  calculations.rs  data_plot_info.rs  field_identifier.rs  kd_tree.rs  mod.rs  named.rs  plot.rs  plot_info.rs  plot_info_file_contents.rs  plot_params.rs  plot_template.rs  plotter.rs  post_compare.rs  post_convergence.rs  post_expansion.rs  post_fn.rs  post_fn_name.rs  post_ionization.rs  post_scaling.rs  post_shadowing.rs  post_slice.rs  postprocess_args.rs  read_hdf5.rs  replot_args.rs  snapshot.rs  swedule.rs  voronoi_swim.rs
testSetups/cartesianGrouped/in/: sims.bob
testSetups/exampleParamFiles/: sims.bob
testSetups/exampleParamFiles/dTypeExpansion/: param.txt
testSetups/exampleParamFiles/expansionResolution/: param.txt
testSetups/exampleParamFiles/icsShadowingDouble/: param.txt
testSetups/exampleParamFiles/multiCoreVsSingleCoreTest/: param.txt  sims.bob
testSetups/exampleParamFiles/multiCoreVsSingleCoreTestNoSx/: Config.sh  param.txt
testSetups/exampleParamFiles/rTypeExpansion/: param.txt
testSetups/exampleParamFiles/shadowing/: param.txt
testSetups/exampleParamFiles/slowDebug/: param.txt
testSetups/exampleSim/: sims.bob
tests/: copy.rs  diff.rs  post_scaling.rs  postprocess.rs  show_output.rs  sim_params.rs  simulation_set.rs
tests/setup/: dir_diff.rs  mod.rs
(+24 files in other folders)
