[package]
name = "bob"
version = "0.1.0"
authors = ["tehforsch <Tonipeter92@googlemail.com>"]
edition = "2021"

[dependencies]
regex = "1"
clap = "3.0.0-beta.2"
anyhow = "1.0.13"
ndarray = { version = "0.15.2", features = ["serde-1"] }
ndarray-stats = "0.5.0"
serde = {version = "1.0.117", features=["derive"]}
serde_derive = {version = "1.0.117"}
serde_yaml = {version = "0.8"}
serde_bytes = "0.11.5"
itertools = "0.9.0"
uom = {version = "0.30.0", features=["use_serde"]}
strfmt = "0.1.6"
hdf5 = "0.8.1"
hdf5-sys = {version = "0.8.1", features=["static"]}
num-traits = "0.2"
ordered-float = {version = "2.0", features=["serde"]}
xdg = "2.2"
shellexpand = "2.1"
pathdiff = "0.2.0"
camino = { version = "1.0.2", features =["serde1"] }
kdtree = "0.6.0"
byteorder = "1.4.3"
lazy_static = "1.4.0"
take_mut = "0.2.2"
# voronoi_swim = { path = "../voronoiSwim/", optional = true}

[dev-dependencies]
tempdir = "0.3.7"
walkdir = "2.0.1"
dissimilar = "1.0"
rand = "0.8.0"
