[package]
name = "boxiom"
version = "0.1.0"
authors = ["tehforsch <Tonipeter92@googlemail.com>"]
edition = "2021"

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.13"
serde = {version = "1.0.117", features=["derive"]}
serde_derive = {version = "1.0.117"}
serde_yaml = {version = "0.8"}
strfmt = "0.1.6"
xdg = "2.2"
shellexpand = "2.1"
camino = { version = "1.0.2", features =["serde1"] }
lazy_static = "1.4.0"
itertools = "0.9.0"
regex = "1"

[dev-dependencies]
tempdir = "0.3.7"
walkdir = "2.0.1"
dissimilar = "1.0"
rand = "0.8.0"
