[package]
name = "boxiom"
version = "0.1.0"
authors = ["tehforsch <Tonipeter92@googlemail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.2.1", features = ["derive" ]}
anyhow = "1.0.70"
serde = {version = "1.0.159", features=["derive"]}
serde_derive = {version = "1.0.159"}
serde_yaml = {version = "0.9"}
strfmt = "0.2.4"
xdg = "2.4"
shellexpand = "3.1"
camino = { version = "1.1.4", features =["serde1"] }
lazy_static = "1.4.0"
itertools = "0.10.5"
regex = "1"

[dev-dependencies]
tempdir = "0.3.7"
walkdir = "2.3.3"
dissimilar = "1.0"
rand = "0.8.5"
